feat(cars): Make car models be displayed as strings rather than Id

--- a/ExpressVoituresWebApp/Views/Cars/Index.cshtml
+++ b/ExpressVoituresWebApp/Views/Cars/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.ResellDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Model.Id)
+                @item.Model
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Vin">Edit</a> |
