--- a/ExpressVoituresWebApp/Views/Cars/Details.cshtml
+++ b/ExpressVoituresWebApp/Views/Cars/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.Model)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Model.Id)
+            @Model.Model
         </dd>
     </dl>
 </div>
