--- a/ExpressVoituresWebApp/Views/Cars/Create.cshtml
+++ b/ExpressVoituresWebApp/Views/Cars/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Vin" class="control-label"></label>
@@ -45,6 +45,15 @@
                 <label asp-for="ResellDate" class="control-label"></label>
                 <input asp-for="ResellDate" class="form-control" />
                 <span asp-validation-for="ResellDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+				<label asp-for="Description" class="control-label"></label>
+				<input asp-for="Description" class="form-control" />
+				<span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label">Upload Image</label>
+                <input type="file" name="ImageFile" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
