--- a/ExpressVoituresWebApp/Views/Cars/Details.cshtml
+++ b/ExpressVoituresWebApp/Views/Cars/Details.cshtml
@@ -46,6 +46,18 @@
         <dd class = "col-sm-10">
             @Model.Model
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            Image
+        </dt>
+        <dd class="col-sm-10">
+            <img src="@Model.ImageUrl" alt="Car Image" style="max-width: 100%; height: auto;" />
+        </dd>
     </dl>
 </div>
 <div>
